Release version 0.10.0 修改为jdk1.8的语法 删除测试类